# SearchEngine_-Graduationwork

./: README.md
SEGW/: CMakeLists.txt
SEGW/JSON/: CONFIG_README.md  answers.json  config.json  config_examples.json  requests.json
SEGW/include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
SEGW/resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
SEGW/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  test_converter.cpp  test_inverted_index.cpp  test_main.cpp  test_search_server.cpp
